# project_kafka_realtime

./: consumer.py  docker-compose.yml  producer.py  pyproject.toml
postgres_data/base/1/: 2619
postgres_data/global/: 1260  1262  2671  pg_control
postgres_data/pg_stat/: pgstat.stat
